added simple solutins and made some changes in readme

--- a/Practice_Question _2.ipynb
+++ b/Practice_Question _2.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "169d7349",
    "metadata": {},
    "source": [
     "# Q1"
@@ -10,8 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "0d93253c",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +31,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aa31437",
    "metadata": {},
    "source": [
     "# Q2"
@@ -42,7 +39,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2c2fe445",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +62,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a22a043",
    "metadata": {},
    "source": [
     "# Q3"
@@ -75,7 +70,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5df3c628",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +103,44 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee7f95e4",
+   "metadata": {},
+   "source": [
+    "# Better Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 4, 2: 5, 3: 4, 4: 4, 5: 3, 11: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[11,2,3,4,5,1,2,3,4,1,2,3,4,3,2,5,1,4,2,5,1]\n",
+    "element_counter = {}\n",
+    "a.sort()\n",
+    "# iterate over all the elements which are sorted\n",
+    "for x in a:\n",
+    "    # check if current element in present in element_counter dictionary as a key\n",
+    "    if x not in element_counter:\n",
+    "        # if current element is not present in the element_counter dict as key\n",
+    "        # set the value as 1 and current element as the key\n",
+    "        element_counter[x] = 1\n",
+    "    else:\n",
+    "        # if current element is present \n",
+    "        # then increment the value by 1\n",
+    "        element_counter[x] += 1 # this is expression equivalent to --> element_counter = element_counter + 1\n",
+    "print(element_counter)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Q4"
@@ -118,7 +149,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2fff1305",
    "metadata": {},
    "outputs": [
     {
@@ -140,9 +170,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "nice solution! but you can use some inbuild functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A simple solution "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = \"my name is harshada\"\n",
+    "# try to remove space with replace function\n",
+    "new_str = l.replace(' ','') #str.replace('string you want to replace','string you want to replace with')\n",
+    "unique_chars = set(l)\n",
+    "if len(new_str) == len(unique_char):\n",
+    "    print('Yes')\n",
+    "else:\n",
+    "    print('No')\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e865b300",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +237,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "96c9bd25",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +264,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -212,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
